@@ -1,10 +1,7 @@
 language: perl
-sudo: false
+dist: trusty
 perl:
-  - "5.8"
-  - "5.10"
-  - "5.12"
-  - "5.14"
+  - "5.16"
   - "5.18"
   - "5.26"
-  - "5.28"
+  - "5.30"
